--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "start": "webpack serve --config webpack.dev.js",
-    "serve": "live-server dist",
+    "serve": "live-server src",
     "test": "jest",
+    "test:watch": "jest --watch",
     "format": "prettier --write \"src/**/*.{js,css}\"",
     "lint": "eslint src/**/*.js"
   },
@@ -16,12 +18,18 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.24.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.27.1",
+    "@babel/plugin-transform-runtime": "^7.27.1",
     "@babel/preset-env": "^7.24.5",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.5",
     "babel-jest": "^29.7.0",
     "css-loader": "^6.11.0",
     "eslint": "^9.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "live-server": "^1.2.2",
     "prettier": "^3.2.5",
     "style-loader": "^3.3.4",
@@ -29,6 +37,18 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^5.10.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   },
   "overrides": {
     "acorn": "^8.11.0",
